# protolens

./: AGENTS.md  Cargo.toml  README.md
.agent/skills/common/codeseed-chinese-code-comments/: SKILL.md  skill.toml
.agent/skills/common/codeseed-context-index/: SKILL.md  skill.toml
.agent/skills/common/codeseed-multi-git-remote/: SKILL.md  skill.toml
.agent/skills/common/codeseed-skill-author/: SKILL.md  skill.toml
.claude/skills/: codeseed-chinese-code-comments  codeseed-context-index  codeseed-multi-git-remote  codeseed-skill-author
.codeseed/: state.json
.cursor/rules/: codeseed-chinese-code-comments.mdc  codeseed-context-index.mdc  codeseed-multi-git-remote.mdc  codeseed-skill-author.mdc
crates/protolens-capture/: Cargo.toml
crates/protolens-capture/src/: lib.rs
crates/protolens-cli/: Cargo.toml
crates/protolens-cli/src/: main.rs
crates/protolens-controller/: Cargo.toml
crates/protolens-controller/src/: lib.rs
crates/protolens-core/: Cargo.toml
crates/protolens-core/src/: error.rs  event.rs  lib.rs  traits.rs
crates/protolens-desktop/: Cargo.toml  tauri.conf.json
crates/protolens-desktop/capabilities/: default.json
crates/protolens-desktop/src/: main.rs
crates/protolens-desktop/ui/: app.js  index.html  styles.css
crates/protolens-output/: Cargo.toml
crates/protolens-output/src/: lib.rs
crates/protolens-protocol/: Cargo.toml
crates/protolens-protocol/src/: lib.rs
docs/: architecture.md  project-brief.md
docs/context/: README.md
