[workspace]
members = [
    "crates/protolens-capture",
    "crates/protolens-cli",
    "crates/protolens-core",
    "crates/protolens-protocol",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/protolens/protolens"

[workspace.dependencies]
base64 = "0.22.1"
clap = { version = "4.5.50", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

protolens-capture = { path = "crates/protolens-capture" }
protolens-core = { path = "crates/protolens-core" }
protolens-protocol = { path = "crates/protolens-protocol" }
