[workspace]
members = [
    "crates/protolens-capture",
    "crates/protolens-cli",
    "crates/protolens-controller",
    "crates/protolens-core",
    "crates/protolens-desktop",
    "crates/protolens-output",
    "crates/protolens-protocol",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/protolens/protolens"

[workspace.dependencies]
base64 = "0.22.1"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.50", features = ["derive"] }
ctrlc = "3.5.1"
hkdf = "0.12.4"
pcap = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = "2.9.5"
tauri-build = "2.5.1"
tauri-plugin-dialog = "2.2.0"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

protolens-capture = { path = "crates/protolens-capture" }
protolens-controller = { path = "crates/protolens-controller" }
protolens-core = { path = "crates/protolens-core" }
protolens-output = { path = "crates/protolens-output" }
protolens-protocol = { path = "crates/protolens-protocol" }
