[package]
name = "protolens-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
protolens-capture.workspace = true
protolens-core.workspace = true
protolens-output.workspace = true
protolens-protocol.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
