[package]
name = "protolens-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
protolens-capture.workspace = true
protolens-controller.workspace = true
protolens-core.workspace = true
serde.workspace = true
tauri.workspace = true

[build-dependencies]
tauri-build.workspace = true
