[package]
name = "protolens-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
protolens-core.workspace = true
serde_json.workspace = true
sha2.workspace = true
